# num2words

./: .flake8  .gitignore  .pypirc.example  ADDING_LANGUAGES.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  PYPI_CHECKLIST.md  QUICKSTART.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  update_profile_readme.md
.github/workflows/: ci.yml  publish.yml
examples/: django_example.py  fastapi_example.py  flask_example.py
num2words/: __init__.py  converter.py
num2words/config/: __init__.py  settings.py
num2words/data/: arabic.json  english.json
num2words/languages/: __init__.py  arabic.py  base.py  english.py
numwordify/: __init__.py
numwordify/languages/: __init__.py  base.py
tests/: __init__.py  test_arabic.py  test_currency.py  test_edge_cases.py  test_english.py  test_integration.py
