[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "num2words"
version = "0.1.0"
description = "A lightweight, performant number-to-words converter supporting English and Arabic"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mohammad Abu Khahsabeh", email = "abukhashabehmohammad@gmail.com"}
]
keywords = ["number", "words", "converter", "english", "arabic", "num2words", "text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/mabukhashabeh/num2words"
Documentation = "https://github.com/mabukhashabeh/num2words#readme"
Repository = "https://github.com/mabukhashabeh/num2words"
Issues = "https://github.com/mabukhashabeh/num2words/issues"

[tool.setuptools]
packages = ["num2words"]

[tool.setuptools.package-data]
"num2words" = ["data/*.json", "*.txt", "*.md"]

